--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,12 @@
       @apply bg-background text-foreground;
     }
   }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+}
+input[type="number"] {
+      -moz-appearance: textfield;
+}
